--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">CSE NITS</a>
+  <a class="navbar-brand" href="landing.html">CSE NITS</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -47,9 +47,10 @@
   </div>
 </nav>
 
-
-    <h1>CSE NITS: Academia</h1>
+<div class="container">
+  <h1>CSE NITS: Academia</h1>
     Website under construction, volutary contribution towards website building will be highly appreciated.
+</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
