modified navbar, set up books and question papers pages

--- a/question-papers.html
+++ b/question-papers.html
@@ -30,9 +30,9 @@
           Resources
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="labs.html">Labs</a>
-          <a class="dropdown-item" href="books.html">Books</a>
-          <a class="dropdown-item" href="question-papers.html">Question Papers</a>
+            <a class="dropdown-item" href="labs.html">Labs</a>
+            <a class="dropdown-item" href="books.html">Books</a>
+            <a class="dropdown-item" href="question-papers.html">Question Papers</a>
         </div>
       </li>
       <li class="nav-item">
@@ -47,8 +47,8 @@
 </nav>
 
 <div class="container">
-  <h1>CSE NITS: Academia</h1>
-    Website under construction, volutary contribution towards website building will be highly appreciated.
+  <h1>CSE Question Papers Resources</h1>
+  Subjectwise question papers for all semesters will be uploaded here. 
 </div>
 
     <!-- Optional JavaScript -->
