--- a/labs.html
+++ b/labs.html
@@ -25,19 +25,15 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="labs.html">Labs</a>
-      </li>
 
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+          Resources
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="labs.html">Labs</a>
+          <a class="dropdown-item" href="books.html">Books</a>
+          <a class="dropdown-item" href="question-papers.html">Question Papers</a>
         </div>
       </li>
       <li class="nav-item">
@@ -51,9 +47,11 @@
   </div>
 </nav>
 
-
-    <h1>CSE lab Resources</h1>
-    This is a sample page where resources of various labs will pe uploaded.
+<div class="container">
+  <h1>CSE Labs Resources</h1>
+  This is a sample page where resources of various labs will pe uploaded.
+</div>
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
