--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>CSE NITS: Academia</title>
   </head>
   <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="landing.html">CSE NITS</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">CSE NITS</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -25,10 +25,10 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
       </li>
-
       <li class="nav-item">
         <a class="nav-link" href="labs.html">Labs</a>
       </li>
+
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
@@ -41,7 +41,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <a class="nav-link" href="about_us.html" tabindex="-1" aria-disabled="true">About Us</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
