--- a/about_us.html
+++ b/about_us.html
@@ -16,7 +16,7 @@
 
 
     <h1>About Us</h1>
-    This page consist of all the Academics related resources for Computer Science and Engineering Department, National Institute of Technology Silchar.
+    This Website consist of all the Academics related resources for Computer Science and Engineering Department, National Institute of Technology Silchar.
     <br></br>
     Currently Website is under construction and any kind of voluntarily contribution will highly appreciated.
     <br></br>
