--- a/books.html
+++ b/books.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
+<link rel="stylesheet" type="text/css" href="style.css">
+
     <title>CSE NITS: Academia</title>
   </head>
   <body>
@@ -15,6 +17,86 @@
   <div class="container">
     <h1>CSE Books Resources</h1>
     Subjectwise e-books for all semesters will be uploaded here. 
+    
+      <div class="middle">
+        <div class="menu">
+            <li class="item" id="sem1">
+                <a href="#sem1" class="btnlist">Semester I</a>
+                <div class="smenu">
+                    <a href="books/11sample.pdf">Subject 1.1</a>
+                    <a href="#">Subject 1.2</a>
+                    <a href="#">Subject 1.3</a>
+                </div>
+            </li>
+
+
+            <li class="item" id="sem2">
+                <a href="#sem2" class="btnlist">Semester II</a>
+                <div class="smenu">
+                    <a href="books/21sample.pdf">Subject 2.1</a>
+                    <a href="#">Subject 2.2</a>
+                    <a href="#">Subject 2.3</a>
+                </div>
+            </li>
+
+
+
+            <li class="item" id="sem3">
+                <a href="#sem3" class="btnlist">Semester III</a>
+                <div class="smenu">
+                    <a href="books/31sample.pdf">Subject 3.1</a>
+                    <a href="#">Subject 3.2</a>
+                    <a href="#">Subject 3.3</a>
+                </div>
+            </li>
+            <li class="item" id="sem4">
+                <a href="#sem4" class="btnlist">Semester IV</a>
+                <div class="smenu">
+                    <a href="books/41sample.pdf">Subject 4.1</a>
+                    <a href="#">Subject 4.2</a>
+                    <a href="#">Subject 4.3</a>
+                </div>
+            </li>
+            <li class="item" id="sem5">
+                <a href="#sem5" class="btnlist">Semester V</a>
+                <div class="smenu">
+                    <a href="books/51sample.pdf">Subject 5.1</a>
+                    <a href="#">Subject 5.2</a>
+                    <a href="#">Subject 5.3</a>
+                </div>
+            </li>
+            <li class="item" id="sem6">
+                <a href="#sem6" class="btnlist">Semester VI</a>
+                <div class="smenu">
+                    <a href="books/61sample.pdf">Subject 6.1</a>
+                    <a href="#">Subject 6.2</a>
+                    <a href="#">Subject 6.3</a>
+                </div>
+            </li>
+            <li class="item" id="sem7">
+                <a href="#sem7" class="btnlist">Semester VII</a>
+                <div class="smenu">
+                    <a href="books/71sample.pdf">Subject 7.1</a>
+                    <a href="#">Subject 7.2</a>
+                    <a href="#">Subject 7.3</a>
+                </div>
+            </li>
+            <li class="item" id="sem8">
+                <a href="#sem8" class="btnlist">Semester VIII</a>
+                <div class="smenu">
+                    <a href="books/81sample.pdf">Subject 8.1</a>
+                    <a href="#">Subject 8.2</a>
+                    <a href="#">Subject 8.3</a>
+                </div>
+            </li>
+
+
+        </div>
+    </div>  
+
+
+
+    
   </div>
 
     <!-- Optional JavaScript -->
