Updated lab resources

--- a/labs.html
+++ b/labs.html
@@ -81,7 +81,7 @@
 	position: absolute;
 	width: 6px;
 	height: 100%;
-	background: black;
+	background: blue;
 	left: 0;
 	top: 0;
 	transition: 0.3s;
@@ -105,7 +105,7 @@
   <script src="navBar.js"></script>
   <div class="container">
     <h1>CSE Labs Resources</h1>
-    This is a sample page where resources of various labs will pe uploaded.
+    Lab resources to be checked
   </div>
 
 
@@ -173,6 +173,15 @@
                 </div>
             </li>
             <li class="item" id="sem8">
+                <a href="#sem8" class="btnlist">Semester VIII</a>
+                <div class="smenu">
+                    <a href="labs/81sample.pdf">Subject 8.1</a>
+                    <a href="#">Subject 8.2</a>
+                    <a href="#">Subject 8.3</a>
+                </div>
+            </li>
+		
+		            <li class="item" id="sem8">
                 <a href="#sem8" class="btnlist">Semester VIII</a>
                 <div class="smenu">
                     <a href="labs/81sample.pdf">Subject 8.1</a>
