Added books list for other missing semesters

--- a/books.html
+++ b/books.html
@@ -177,6 +177,36 @@
                     <a href="#">Subject 8.3</a>
                 </div>
             </li>
+		            <li class="item" id="sem8">
+                <a href="#sem8" class="btnlist">Semester VIII</a>
+                <div class="smenu">
+                    <a href="books/81sample.pdf">Subject 8.1</a>
+                    <a href="#">Subject 8.2</a>
+                    <a href="#">Subject 8.3</a>
+                </div>
+            </li>
+		            <li class="item" id="sem4">
+                <a href="#sem8" class="btnlist">Semester VIII</a>
+                <div class="smenu">
+                    <a href="books/81sample.pdf">Subject 8.1</a>
+                    <a href="#">Subject 8.2</a>
+                    <a href="#">Subject 8.3</a>
+                </div>
+            </li>            <li class="item" id="sem5">
+                <a href="#sem8" class="btnlist">Semester VIII</a>
+                <div class="smenu">
+                    <a href="books/81sample.pdf">Subject 8.1</a>
+                    <a href="#">Subject 8.2</a>
+                    <a href="#">Subject 8.3</a>
+                </div>
+            </li>            <li class="item" id="sem6">
+                <a href="#sem8" class="btnlist">Semester VIII</a>
+                <div class="smenu">
+                    <a href="books/81sample.pdf">Subject 8.1</a>
+                    <a href="#">Subject 8.2</a>
+                    <a href="#">Subject 8.3</a>
+                </div>
+            </li>
 
 
         </div>
