Adding last CSS class

--- a/books.html
+++ b/books.html
@@ -25,6 +25,13 @@
 	left: 50%;
 	transform: translate(-50%, -35%);
 }
+	    
+	    .last{
+	position: absolute;
+	top: 60%;
+	left: 50%;
+	transform: translate(-50%, -35%);
+}
 
 .menu{
 	width: 400px;
