--- a/labs.html
+++ b/labs.html
@@ -36,6 +36,11 @@
 	border-top: 1px solid black;
 	overflow: hidden;
 }
+	    
+	    .item2{
+	border-top: 1px solid black;
+	overflow: hidden;
+}
 
 .btnlist{
 	text-align: center;
