--- a/landing.html
+++ b/landing.html
@@ -18,6 +18,7 @@
             <center><h1>Welcome to NIT Silchar</h1></center>
             <center><h2>Computer Science and Engineering</h2></center>
             <center><a class="btn btn-info btn-lg margin-top-20" href="index.html" role="button">Get Started</a></center>
+          <center><a class="btn btn-info btn-lg margin-top-20" href="index.html" role="button">Get Started</a></center>
         </div>
     </div>
 
