--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
 
   <script src="navBar.js"></script>
 
-
+GAllery change
 
   <h1>CSE NITS: Academia</h1>
     Website under construction, volutary contribution towards website building will be highly appreciated.
